tests/good/simple29.tig
let
  var x:=0
in
  print_int(x);
  1/42
end